fix gallery on mobile devices

--- a/src/assets/styles/blocks/gallery.scss
+++ b/src/assets/styles/blocks/gallery.scss
@@ -3,6 +3,9 @@
     margin: auto;
     max-width: 50%;
     width: 100%;
+    @media screen and (max-width:1024px){
+        max-width: 90%;
+    }
 }
 
 .gallery__slide{
